2014-11-16  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/connection_pool.c,
	  ext/oci8/lob.c, ext/oci8/metadata.c, ext/oci8/object.c,
	  ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/ocihandle.c, ext/oci8/stmt.c:
	    Raises an exception when a closed OCI8 object is used.

2014-02-02  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.7 and 2.1.6.
	* VERSION: change the version to 2.1.7.

2014-01-25  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, lib/oci8.rb.in: Follow ABI versioning after ruby 2.1.0.

2014-01-19  Kubo Takehiro  <kubo@jiubao.org>
	* docs/install-full-client.md, docs/install-instant-client.md: Change down
	    load URL and filenames in examples.

2014-01-06  Kubo Takehiro  <kubo@jiubao.org>
	* README.md, docs/install-full-client.md, docs/install-instant-client.md,
	  docs/report-installation-issue.md, ext/oci8/oraconf.rb, ruby-oci8.gemspec:
	    Move the project page and download URL to github.

2014-01-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c, ext/oci8/oci8.h, lib/oci8/metadata.rb:
	    Fix OCI8#describe_table to follow synonyms in a remote database.
	    Add OCI8::Metadata::Base#obj_link.

2013-12-29  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.6 and 2.1.5.
	* VERSION: change the version to 2.1.6.

2013-12-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for Windows x64. OCI.lib for MSVC doesn't
	    work with mingw64 compilers. fix URL in the error message.

2013-12-14  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb, test/test_metadata.rb: fix
	    OCI8::Metadata::Synonym#schema_name and #translated_name
	    for synonyms with a database link and without schema_name.

2013-12-14  KUBO Takehiro  <kubo@jiubao.org>
	* test/*.rb: suppress warnings "MiniTest::Unit::TestCase is now Minitest::Test"
	    when minitest gem is installed.

2013-12-14  KUBO Takehiro  <kubo@jiubao.org>